--- a/base.html
+++ b/base.html
@@ -19,7 +19,7 @@
           Cantidad:
           <span class="cantidad">0</span>
           <button>+</button>
-          <button>-</button>
+          <button id="botonMenos">-</button>
         </p>
       </div>
     </section>
