--- a/base.html
+++ b/base.html
@@ -18,7 +18,7 @@
         <p>
           Cantidad:
           <span class="cantidad">0</span>
-          <button>+</button>
+          <button class="botonMas">+</button>
           <button>-</button>
         </p>
       </div>
